--- a/package.json
+++ b/package.json
@@ -8,10 +8,19 @@
     "build": "next build",
     "start": "next start",
     "export": "next build && next export",
-    "lint": "eslint --fix .",
-    "format": "prettier --write './**/*.{js,jsx,ts,tsx,css,md,json}' --config ./.prettierrc"
+    "lint": "eslint --fix ."
   },
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/neywannabillion/lof-manage.git"
+  },
+  "bugs": {
+    "url": "https://github.com/neywannabillion/lof-manage/issues"
+  },
+  "homepage": "https://github.com/neywannabillion/lof-manage#lof-manage",
   "dependencies": {
+    "@emotion/react": "^11.9.0",
+    "@emotion/styled": "^11.8.1",
     "@mui/material": "^5.6.1",
     "axios": "^0.26.1",
     "dayjs": "^1.11.1",
@@ -28,8 +37,9 @@
   "author": "ney",
   "license": "ISC",
   "devDependencies": {
-    "@types/node": "^17.0.25",
-    "@types/react": "^18.0.6",
+    "@types/node": "^17.0.26",
+    "@types/react": "^17.0.38",
+    "@types/react-dom": "^17.0.9",
     "@typescript-eslint/eslint-plugin": "^4.4.1",
     "eslint": "^8.14.0",
     "eslint-config-airbnb-typescript": "^17.0.0",
@@ -39,6 +49,7 @@
     "eslint-plugin-react": "^7.20.3",
     "eslint-plugin-react-hooks": "^4.0.8",
     "prettier": "^2.6.2",
+    "sass": "^1.51.0",
     "typescript": "^4.6.3"
   }
 }
