--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "@emotion/react": "^11.9.0",
     "@emotion/styled": "^11.8.1",
     "@mui/material": "^5.6.1",
+    "@nextui-org/react": "^1.0.0-beta.7",
     "axios": "^0.26.1",
     "dayjs": "^1.11.1",
     "lodash": "^4.17.21",
@@ -31,7 +32,7 @@
     "react-dom": "^17.0.2",
     "react-icons": "^4.3.1",
     "react-modern-drawer": "^1.1.1",
-    "react-toastify": "^8.2.0"
+    "react-toastify": "^9.0.1"
   },
   "keywords": [],
   "author": "ney",
